# real-estate

./: .gitignore  .pre-commit-config.yaml  README.md  analysis  analysis.ipynb  by_suburb.py  daily.py  done.txt  failed_sites.txt  finished_suburbs.txt  justfile  loaded.txt  main.py  make_all.py  make_empty_csv.py  missed.py  nohup.out  pyproject.toml  test.py  testing.py  to_sql.py  toomany.txt  utils.py
.ipynb_checkpoints/: analysis-checkpoint.ipynb
data/: 0800.csv  0810.csv  0812.csv  0820.csv  0822.csv  0828.csv  0829.csv  0830.csv  0832.csv  0834.csv  0835.csv  0836.csv  0837.csv  0838.csv  0839.csv  0840.csv  0841.csv  0845.csv  0846.csv  0847.csv  0850.csv  0852.csv  0854.csv  0860.csv  0862.csv  0870.csv  0872.csv  0873.csv  0874.csv  0875.csv  0880.csv  2000.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  2015.csv  2016.csv  2017.csv  (+2562 more)
sodapdf-converted/sodapdf-converted/: pg_0001.htm  pg_0002.htm
