[project]
name = "real-estate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.0",
    "selenium>=4.0.0",
    "scikit-learn>=1.0.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "ruff>=0.3.0",
    "ty>=0.0.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # missing-trailing-comma
  "T20",  # flake8-print
  "ERA",  # eradicate
  "D",  # docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"
